<resources>
    <string name="app_name">AllEd</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="the_slogan"><b>Our Aim: Your Education</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="backward"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="addUrl">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete_note_delete">Delete Note</string>
    <string name="cancel">Cancel</string>
    <string name="educational_websites">Educational Websites</string>

    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_on">On</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>


    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
    <string name="repetition_interval">Repetition Interval</string>
    <string name="title">Title</string>
    <string name="alled">AllEd</string>
    <string name="our_aim_your_education">Our Aim: Your Education</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="education_quote">Education is the most powerful weapon which you can use to change the world.</string>
    <string name="quoteAuthor">- Nelson Mandela</string>
    <string name="your_account">Your Account</string>
    <string name="full_name">Full Name:</string>
    <string name="age">Age:</string>
    <string name="email_address_profile">Email Address:</string>
    <string name="exit_page">Exit Page</string>
    <string name="full_name_register">Full Name</string>
    <string name="age_register">Age</string>
    <string name="email">Email</string>
    <string name="password_register">Password</string>
    <string name="register_now_register">Register Now</string>
    <string name="type_event">Type Event</string>
    <string name="notify_me">Notify Me</string>
    <string name="currentdate">CurrentDate</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="add">ADD</string>
    <string name="pick_color">Pick Color</string>
    <string name="event">Event</string>
    <string name="disclaimer">Disclaimer: Some Events May Not Notify On Time So Please Add Important Notifications On Your Phone Calendar As Well!</string>
    <string name="logout">Logout</string>

    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!... You have completed the task successfully..</string>
    <string name="deleteReminder">Delete</string>
    <string name="update">Update</string>
    <string name="complete">Complete</string>
    <string name="close">Close</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All tasks</string>
    <string name="hello">Hello</string>
    <string name="done">Done</string>
</resources>