<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signupandlogin.Login">

    <ImageView
        android:id="@+id/cap"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_75sdp"
        android:src="@drawable/cap_image"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/app_name" />



    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alled"
        android:textSize="@dimen/_30ssp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cap"
        android:layout_marginTop="-40dp"
        />
    <TextView
        android:id="@+id/login_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_aim_your_education"
        android:textStyle="italic"
        android:textSize="@dimen/_12ssp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_slogan"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/_5sdp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/_12ssp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="@dimen/_5sdp"
        />
    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textColor="#ffff"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        />



    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/register"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


