<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:id="@+id/activity_custom_calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="@color/orange">

        <ImageButton
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/previousBtn"
            android:background="@drawable/ic_back_arrow"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="1dp"
            android:text="@string/currentdate"
            android:id="@+id/currentDate"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:layout_weight="3"
            />

        <ImageButton
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/nextBtn"
            android:background="@drawable/ic_next_arrow"
            android:layout_margin="@dimen/_5sdp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_1sdp"
        android:paddingBottom="@dimen/_1sdp"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/sun"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/wed"
            android:background="@color/orange"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/thur"
            android:background="@color/colorPrimary"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sat"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_1sdp"
        android:paddingBottom="@dimen/_1sdp"
        android:background="@color/black">

    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridView"
        android:numColumns="7">


    </GridView>


</LinearLayout>