<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alled.alled.signupandlogin.Register">

    <ImageView
        android:id="@+id/cap"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/cap_image"
        app:layout_constraintBottom_toTopOf="@id/banner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="-40dp"
        />

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alled"
        android:textSize="@dimen/_32ssp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/_30sdp"
        />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:ems="10"
        android:hint="@string/full_name_register"
        android:inputType="textPersonName"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="@dimen/_5sdp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/age"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/age_register"
        android:inputType="number"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        android:drawableStart="@drawable/ic_baseline_123_24"
        android:drawablePadding="5dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/_5sdp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:ems="10"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="@dimen/_5sdp"
        />
    <Button
        android:id="@+id/registerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/orange"
        android:text="@string/register_now_register"
        android:textColor="#ffff"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>