<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Profile_Page"
    android:id="@+id/profileDrawer"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view_profile"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00008577"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_menu_24" />

        <TextView
            android:id="@+id/profileBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_account"
            android:textSize="@dimen/_30ssp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toBottomOf="@+id/toolbarProfile"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/orange"
            android:layout_margin="@dimen/_15sdp"
            />

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/profileBanner"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_20ssp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/nameTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_18ssp"
            />


        <TextView
            android:id="@+id/ageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_20ssp"
            />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ageTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_18sdp"
            />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_profile"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/age"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_20ssp"
            />

        <TextView
            android:id="@+id/email"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_18sdp"
            />





        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginTop="@dimen/_40sdp"
            android:textSize="@dimen/_26ssp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
            android:drawablePadding="@dimen/_5sdp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.drawerlayout.widget.DrawerLayout>